탐색 뷰, 검색 페이지 추가

--- a/html/pick_view.html
+++ b/html/pick_view.html
@@ -75,22 +75,14 @@
                 </div>
                 <!-- //left_box -->
                 <div class="cen_box">
-                    <!-- <h1 class="page_title">퀀트 프로</h1> -->
+                    <h1 class="page_title">슈퍼Pick</h1>
                 </div>
                 <!-- //cen_box -->
                 <div class="r_menu">
                     <!-- <a href="member/mypage_mod.html">MY</a> -->
-                    <a href="search.html"><img src="../img/us/hdr_sch.svg" alt="검색"></a>
+                    <!-- <a href="search.html"><img src="../img/us/hdr_sch.svg" alt="검색"></a> -->
                 </div>
-                <!-- //r_menu -->
-                <!-- 현재 페이지명 -->
-                <div class="page_hdrName">
-                    <a href="javascript:historyHome();" class="go_back">
-                        <span class="name">치폴레 멕시칸 그릴</span>
-                        <div class="detail num"><span>2032.92 (-0.91%)</span></div>
-                    </a>
-                </div>
-                <!-- //page_hdrName -->
+                <!-- //r_menu -->                
             </div>
             <!-- //header_bgWrap -->
         </div>
@@ -101,133 +93,48 @@
             <!-- 검색결과 뷰 -->
             <div class="mainBox view">
 
-                <!-- 검색 종목 -->
-                <div class="recom_company">
-                    <ul class="list">
-                        <li class="ticker">AAPL</li>
-                        <li class="company_nm">마이크로소프트마이크로소프트</li>                        
-                        
-                        <!-- 정규장 -->
-                        <li class="detail">
-                            <div class="num">
-                                <span><b>898.</b>00</span>
-                            </div>
-                            <div class="per">
-                                <span class="increase"><b>+89.</b>89</span>
-                                <span class="increase">(<b>+89.</b>89%)</span>
-                                <!-- increase 증가, decrease 감소, 보합은 same -->
-                                <span class="day">1/23, 장마감</span>
-                            </div>
-                        </li>                        
-                    </ul>
-                </div>
-                <!-- //recom_company -->
-
-
-                <!-- outline -->
-                <div class="mainBox outline">
-                    <div class="bg_box">
-                        <div class="data_opinion">
-                            <div class="line">
-                                <div class="th">시가총액</div>
-                                <div class="td">
-                                    <b>1,898.</b>00
-                                    <span class="unit">백만달러</span>
+                <!-- 슈퍼픽 종목 개요 -->
+                <div class="mainBox superpick_overview">
+                    <!-- 검색 종목 -->
+                    <div class="recom_company">
+                        <ul class="list">
+                            <li class="ticker">AAPL</li>
+                            <li class="company_nm">마이크로소프트마이크로소프트</li>                        
+                            
+                            <!-- 정규장 -->
+                            <li class="detail">
+                                <div class="num">
+                                    <span><b>898.</b>00</span>
                                 </div>
-                            </div>
-                            <div class="line">
-                                <div class="th">7일 주가</div>
-                                <div class="td">
-                                    <span class="increase"><b>+89.</b>89%</span>
+                                <div class="per">
+                                    <span class="increase"><b>+89.</b>89</span>
+                                    <span class="increase">(<b>+89.</b>89%)</span>
+                                    <!-- increase 증가, decrease 감소, 보합은 same -->
+                                    <span class="day">1/23, 장마감</span>
                                 </div>
-                            </div>
-                            <div class="line">
-                                <div class="th">6개월 주가</div>
-                                <div class="td">
-                                    <span class="decrease"><b>-89.</b>89%</span>
-                                </div>
-                            </div>
-                            <div class="line">
-                                <div class="th">3개월 추세</div>
-                                <div class="td">
-                                    <span class="ibox str">강세</span>
-                                    <!-- <span class="ibox bas">횡보</span> -->
-                                    <!-- <span class="ibox weak">약세</span> -->
-                                </div>
-                            </div>
-                        </div>
+                            </li>                        
+                        </ul>
                     </div>
+                    <!-- //recom_company -->
 
-                    <div id="containeroutline1_1" class="outline_style"></div>
-
-                    <div class="summary">
-                        <div class="view_box">
-                            <p class="txt">
-                                <strong>애플</strong>은 스마트폰(아이폰), PC(맥), 태블릿(아이패드), 웨어러블, 기타 악세사리와 디지털 컨텐츠 스토어, 스트리밍 서비스,
-                                애플케어 등 다양한 제품과 컨텐츠를 동시에 제공하는 회사
-                            </p>
+                    <div class="mainBox outline">
+                        <div class="summary">
+                            <div class="view_box">
+                                <p class="txt">
+                                    <strong>애플</strong>은 스마트폰(아이폰), PC(맥), 태블릿(아이패드), 웨어러블, 기타 악세사리와 디지털 컨텐츠 스토어, 스트리밍 서비스,
+                                    애플케어 등 다양한 제품과 컨텐츠를 동시에 제공하는 회사
+                                </p>
+                            </div>
+                            <!-- //view_box -->
                         </div>
-                        <!-- //view_box -->
                     </div>
                 </div>
-                <!-- //outline -->
 
-                <!-- 증권사 투자의견 -->
-                <div class="mainBox inve_opinion">
-                    <div class="l_box">
-                        <h3 class="title">증권사 투자의견</h3>
-                        <span class="total">총 <strong>34</strong>건</span>
-                        <span class="signal_guide"><img src="../img/us/txt_guide_w.svg" alt="가이드보기"></span>
-                        <span class="signal buy">매수</span>
-                    </div>
-                    <!-- 매수 매도 보유 관망 버튼 확인용. 실 서비스에선 삭제 -->
-                    <br>
-                    <span class="signal buy">비중확대</span>
-                    <span class="signal waitting">중립</span>
-                    <span class="signal sell">비중축소</span>
-                    <span class="signal sell">매도</span>
-                    <span class="signal hold">N/A</span>
-                    <!-- //매수 매도 보유 관망 버튼 확인용. 실 서비스에선 삭제 -->
-
-                    <div class="dataBox">
-                        <div class="reg_day">
-                            <h3 class="s_title">목표주가</h3>
-                            <span class="day">업데이트 23.06/23, *목표주가 발표 증권사 수</span>
-                        </div>
-                        <div class="bg_box">
-                            <div class="data_opinion">
-                                <div class="line">
-                                    <div class="td">
-                                        1,898
-                                    </div>
-                                </div>
-                                <div class="line">
-                                    <div class="th">최고</div>
-                                    <div class="td">
-                                        265.56
-                                    </div>
-                                </div>
-                                <div class="line">
-                                    <div class="th">최저</div>
-                                    <div class="td">
-                                        265.56
-                                    </div>
-                                </div>
-                                <div class="line">
-                                    <div class="th">증권사 *</div>
-                                    <div class="td">
-                                        56
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- //dataBox -->
-
-
-                    <div id="sum_topchart_band" class="chart_layout"></div>
+                <!-- 투자 포인트 -->
+                <div class="mainBox investment_points">
+                    투자 포인트 
                 </div>
-                <!-- //inve_opinion -->
+
 
                 <!-- 매출액, 영업이익, 주당순이익(EPS) 막대 차트 -->
                 <div class="mainBox financials">
