--- a/html/search.html
+++ b/html/search.html
@@ -64,6 +64,22 @@
 <body class="sstock_us">
     <div id="wrap">
         
+        <div id="header" class="main_hdr">
+            <div id="menu">
+                <nav class="gnb">
+                    <ul class="gnb_li">
+                        <li><a href="tsst_p23.html" title="HOME">홈</a></li>
+                        <li><a href="/stock/portone" title="슈퍼스탁 1호">슈퍼스탁1호</a></li>
+                        <li><a href="/stock/recommend" title="슈퍼스탁 2호">슈퍼스탁2호</a></li>                        
+                        <li><a href="/stock/score" title="투자점수">투자점수</a></li>
+                        <li><a href="/stock/theme" title="업종/테마">업종/테마</a></li>
+                        <li class="usa-stock"><a href="sstock_us.html"><i></i> 미국주식</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <!-- //메인해더 main_hdr -->
+         
         <div id="container">
             <!-- 종목 검색 -->
             <div class="mainBox searching search_page">
