--- a/html/sstock_us.html
+++ b/html/sstock_us.html
@@ -111,19 +111,19 @@
                         <!-- 검색결과 있을경우 -->
                         <ul>
                             <li>
-                                <a href="#">
+                                <a href="search_view.html">
                                     <span class="schCode"><strong>Ap</strong>PL</span>
                                     <span class="schList"><strong>Ap</strong>ple Inc 애플</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="_on">
+                                <a href="search_view.html" class="_on">
                                     <span class="schCode"><strong>Ap</strong></span>
                                     <span class="schList">AmpcoPittsburgh Corporation 애플</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="_on">
+                                <a href="search_view.html" class="_on">
                                     <span class="schCode"><strong>Ap</strong>LT</span>
                                     <span class="schList"><strong>Ap</strong>plied Ther<strong>ap</strong>eutics, Inc.
                                         애플</span>
