--- a/html/search_view.html
+++ b/html/search_view.html
@@ -63,6 +63,22 @@
 
     <div id="wrap">
 
+        <div id="header" class="main_hdr">
+            <div id="menu">
+                <nav class="gnb">
+                    <ul class="gnb_li">
+                        <li><a href="tsst_p23.html" title="HOME">홈</a></li>
+                        <li><a href="/stock/portone" title="슈퍼스탁 1호">슈퍼스탁1호</a></li>
+                        <li><a href="/stock/recommend" title="슈퍼스탁 2호">슈퍼스탁2호</a></li>                        
+                        <li><a href="/stock/score" title="투자점수">투자점수</a></li>
+                        <li><a href="/stock/theme" title="업종/테마">업종/테마</a></li>
+                        <li class="usa-stock"><a href="sstock_us.html"><i></i> 미국주식</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <!-- //메인해더 main_hdr -->
+
         <div id="header" class="sub_hdr">
             <div class="bgWrap">
                 <div class="left_box">
@@ -75,7 +91,7 @@
                 </div>
                 <!-- //left_box -->
                 <div class="cen_box">
-                    <!-- <h1 class="page_title">퀀트 프로</h1> -->
+                    <h1 class="page_title">종목검색</h1>
                 </div>
                 <!-- //cen_box -->
                 <div class="r_menu">
